--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   provider: ^6.1.1
   flutter_svg: ^2.0.10
   lottie: ^3.3.1
+  smooth_page_indicator: ^1.2.1
 
   flutter:
     sdk: flutter
@@ -73,6 +74,8 @@ flutter:
     - assets/images/
     - assets/icons/
     - .env
+    - assets/animations/splash_screen_1.json
+    - assets/animations/splash_screen_2.json
 
   # To add assets to your application, add an assets section, like this:
   # assets:
